--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -31,3 +31,4 @@ RUN BX_DEV_USERID=$bx_dev_userid
 RUN if [ "$bx_dev_user" != root ]; then useradd -ms /bin/bash -u $bx_dev_userid $bx_dev_user; fi
 
 CMD ["/bin/bash"]
+## End
